tests/ui/typeck/arg_type_mismatch.rx
//@ spec: RXS-0042, RXS-0047
fn add(a: i32, b: i32) -> i32 {
    a + b
}

fn f() -> i32 {
    add(1, true) //~ ERROR RX2001
}
